--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.6"
+    "mongoose": "^6.6.6",
+    "process": "^0.11.10"
   }
 }
