--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "envdot": "^0.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.6"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.6.6",
+    "password-validator": "^5.3.0"
   }
 }
