--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "mongoose": "^6.6.6",
-    "process": "^0.11.10"
+    "password-validator": "^5.3.0",
+    "process": "^0.11.10",
+    "yup": "^0.32.11"
   }
 }
