add into package.json

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,5 +14,12 @@
     "password-validator": "^5.3.0",
     "process": "^0.11.10",
     "yup": "^0.32.11"
-  }
+  },
+
+  "engines": {
+    "node": ">=16.0.0"
+  },
+
+  "name": "klak_shop",
+  "main": "app.js"
 }
