--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "klak_shop",
+  "version" : "0.1.0",
+  "main": "app.js",
+  "scripts" : {
+    "start" : "node app.js"
+  },
+
+  "engines": {
+    "node": "^10"
+  },
+
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.1.0",
@@ -14,12 +25,6 @@
     "password-validator": "^5.3.0",
     "process": "^0.11.10",
     "yup": "^0.32.11"
-  },
+  }
 
-  "engines": {
-    "node": ">=16.0.0"
-  },
-
-  "name": "klak_shop",
-  "main": "app.js"
 }
