--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,4 +1,12 @@
 {
+
+  "name" : "klak_shop",
+  "version" : "0.1.0",
+  "main" : "app.js",
+  "scripts" : {
+    "start" : "node server.js"
+  },
+
   "dependencies": {
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
