--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,6 +6,9 @@
   "scripts" : {
     "start" : "node server.js"
   },
+  "engines" : {
+    "node" : "^10"
+  },
 
   "dependencies": {
     "body-parser": "^1.20.1",
