--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name" : "myapp",
-  "version" : "0.1.0",
-  "main" : "myapp.js",
+  "name" : "klak",
+  "version" : "1.0.0",
+  "main" : "app.js",
   "scripts" : {
-    "start" : "node myapp.js"
+    "start" : "node server.js"
   },
   "engines" : {
     "node" : "^10"
