--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version" : "0.1.0",
   "main" : "app.js",
   "scripts" : {
-    "start" : "node back-end/server.js"
+    "start" : "cd back-end; npm install node; server.js"
   },
   "engines" : {
     "node" : "^10"
