--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version" : "0.1.0",
   "main" : "app.js",
   "scripts" : {
-    "start" : "cd back-end; npm install; node server.js"
+    "start" : "cd back-end",
+    "start" : "npm install",
+    "start" : "node server.js"
   },
   "engines" : {
     "node" : "^10"
